--- a/htnl_css_basic_1/index.html
+++ b/htnl_css_basic_1/index.html
@@ -11,6 +11,8 @@
   
             figure {
                 text-align: center;
+                /*display: block;
+                margin: 0 auto;*/
             }
 
             iframe{
