--- a/footer/footer_float.html
+++ b/footer/footer_float.html
@@ -24,14 +24,14 @@
             .float aside{
                 float: left;
                 width: 20%;
-                min-height: 200px;
+                min-height: 80vh;
                 background: green;
             }
 
             .float main{
                 float: right;
                 width: 80%;
-                min-height: 200px;
+                min-height: 80vh;
                 background: blue;
                
                 
@@ -39,7 +39,7 @@
             .float footer{
                 float: left;   
                 width: 100%;
-                min-height: 100px;
+                min-height: 87px;
                 background: yellow;
             }
 
