--- a/footer/footer_grid.html
+++ b/footer/footer_grid.html
@@ -12,7 +12,7 @@
                 display: grid;
                 width: 100%;
                 grid-template-areas: 1fr 1fr 1fr;
-                grid-template-rows: minmax(100px,auto) minmax(700px,auto)  minmax(130px,auto);
+                grid-template-rows: minmax(100px,auto) minmax(80vh,auto)  minmax(87px,auto);
                 grid-template-areas: "header header header"
                                      "aside main main"
                                      "footer footer footer"            
