--- a/footer/footer_position.html
+++ b/footer/footer_position.html
@@ -14,7 +14,7 @@
             }
             .position main{
                 width: 100%;
-                min-height: 600px;
+                min-height: 100vh;
                 background: blue;
 
             }
